--- a/config.template
+++ b/config.template
@@ -1,4 +1,4 @@
-# Configuration File for ePuSta-Server
+# Configuration File for ePuSta-Tools
 # created by Paul.Grimm at gbv.de 
 #
 # copy the config.template to config and set the values 
